# rust-discord-activity

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/client/: ipc.rs
src/models/: activity.rs  error.rs  mod.rs
src/models/activity_data/: activity_flag.rs  activity_type.rs  asset.rs  button.rs  emoji.rs  mod.rs  party.rs  secret.rs  timestamp.rs
src/models/client/: commands.rs  event.rs  mod.rs  payload.rs
