[package]
name = "rust-discord-activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
