[package]
name = "rust-discord-activity"
description = "A lightweight library to control Discord Rich Presence"
version = "0.1.0"
edition = "2021"
authors = ["DylanCa <dylan.cattelan@gmail.com"]
license = "MIT"
keywords = ["discord", "activity", "rich", "presence"]
repository = "https://github.com/DylanCa/Rust-Discord-Activity"
homepage = "https://github.com/DylanCa/Rust-Discord-Activity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
